<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/navigation"
    app:startDestination="@id/titleFragment">

    <fragment
        android:id="@+id/titleFragment"
        android:name="com.example.triplex.TitleFragment"
        android:label="@string/app_name"
        tools:layout="@layout/fragment_title">
        <action
            android:id="@+id/action_titleFragment_to_gameFragment"
            app:destination="@id/gameFragment"
            app:popUpToInclusive="true" />
        <action
            android:id="@+id/action_titleFragment_to_aboutFragment"
            app:destination="@id/aboutFragment"
            app:popUpToInclusive="true" />
    </fragment>
    <fragment
        android:id="@+id/gameFragment"
        android:name="com.example.triplex.GameFragment"
        android:label="@string/level_text"
        tools:layout="@layout/fragment_game">
        <action
            android:id="@+id/action_gameFragment_to_gameFinishFragment"
            app:destination="@id/gameFinishFragment"
            app:popUpTo="@id/titleFragment"
            app:popUpToInclusive="true" />
    </fragment>
    <fragment
        android:id="@+id/aboutFragment"
        android:name="com.example.triplex.AboutFragment"
        android:label="@string/about_text_name"
        tools:layout="@layout/fragment_about" />
    <fragment
        android:id="@+id/gameFinishFragment"
        android:name="com.example.triplex.GameFinishFragment"
        android:label="Game Over"
        tools:layout="@layout/fragment_game_finish">
        <action
            android:id="@+id/action_gameFinishFragment_to_titleFragment"
            app:destination="@id/titleFragment" />
    </fragment>
</navigation>