<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".GameFinishFragment">


    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/game_over_text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="250dp"
        android:layout_marginEnd="16dp"
        android:gravity="center"
        android:text="@string/game_over"
        android:textAppearance="?attr/textAppearanceHeadline2"
        android:textStyle="bold"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/playAgainBtn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        android:text="@string/play_again"
        app:layout_constraintStart_toStartOf="@+id/game_over_text"
        app:layout_constraintTop_toBottomOf="@+id/game_over_text" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/returnBtn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/return_to_title"
        app:layout_constraintBottom_toBottomOf="@+id/playAgainBtn"
        app:layout_constraintEnd_toEndOf="@+id/game_over_text"
        app:layout_constraintTop_toTopOf="@+id/playAgainBtn" />


</androidx.constraintlayout.widget.ConstraintLayout>