<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".GameFragment">


    <com.google.android.material.card.MaterialCardView
        android:id="@+id/sumCard"
        android:layout_width="180dp"
        android:layout_height="90dp"
        android:layout_margin="16dp"
        app:layout_constraintBottom_toBottomOf="@+id/multiplyCard"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/multiplyCard">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <com.google.android.material.textview.MaterialTextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="18dp"
                android:text="@string/add"
                android:textAlignment="center"
                android:textAppearance="?attr/textAppearanceHeadline6" />

            <com.google.android.material.textview.MaterialTextView
                android:id="@+id/sumValue"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/sumProduct"
                android:textAlignment="center"
                android:textAppearance="?attr/textAppearanceHeadline5" />

        </LinearLayout>

    </com.google.android.material.card.MaterialCardView>

    <com.google.android.material.card.MaterialCardView
        android:id="@+id/multiplyCard"
        android:layout_width="180dp"
        android:layout_height="90dp"
        android:layout_marginTop="18dp"
        android:layout_marginEnd="16dp"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent">


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <com.google.android.material.textview.MaterialTextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="18dp"
                android:text="@string/multiply"
                android:textAlignment="center"
                android:textAppearance="?attr/textAppearanceHeadline6" />

            <com.google.android.material.textview.MaterialTextView
                android:id="@+id/multiplyValue"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/multiplyProduct"
                android:textAlignment="center"
                android:textAppearance="?attr/textAppearanceHeadline5" />

        </LinearLayout>

    </com.google.android.material.card.MaterialCardView>


    <com.google.android.material.card.MaterialCardView
        android:layout_width="190dp"
        android:layout_height="80dp"
        android:layout_marginTop="65dp"
        app:layout_constraintLeft_toLeftOf="@id/sumCard"
        app:layout_constraintRight_toRightOf="@id/multiplyCard"
        app:layout_constraintTop_toBottomOf="@id/sumCard">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <com.google.android.material.textview.MaterialTextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/your_answer"
                android:textAlignment="center"
                android:textAppearance="?attr/textAppearanceHeadline6" />


            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/codeEditText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:imeOptions="actionDone"
                android:inputType="number"
                android:letterSpacing="0.50"
                android:maxLength="3"
                android:textAlignment="center"
                android:textAppearance="?attr/textAppearanceHeadline5" />

        </LinearLayout>


    </com.google.android.material.card.MaterialCardView>


</androidx.constraintlayout.widget.ConstraintLayout>
